--- a/gb/24/6/27/n14278726.md
+++ b/gb/24/6/27/n14278726.md
@@ -17,36 +17,37 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/10/n14267919.md#1">联合国安理会支持美国的以哈停火提议</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14272018.md#1">【新闻大家谈】难掩败局 中共被踢出新联合国？</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/22/n14275093.md#1">联合国秘书长：俄罗斯需遵守对朝鲜的制裁</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278690.md#1">传将提高大陆地区旅游警示 政院：提醒台湾民众注意赴中安全</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278688.md#1">国会职权修法生效 台政院：谨慎思考应对方式</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278679.md#1">调升陆港澳旅游警示“橙色” 陆委会：保护民众安全</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278604.md#1">台陆委会提高陆港澳旅游警示 建议避免前往</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278435.md#1">国台办称欢迎再来 台网红：想请我吃鸿门宴</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14277986.md#1">赖清德：释宪是捍卫民主 向国家、历史负责</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308041.md#1">被中共列为台独并遭假讯息攻击 林飞帆报警</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308116.md#1">澳前总理称台湾为“中国不动产” 台外交部严正驳斥</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307419.md#1">国台办设台独举报信箱 陆委会：很多人会被卷入</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307277.md#1">马治薇涉受中共资助参选台湾立委 遭判8个月</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307310.md#1">陆委会：“金厦大桥”有政治意图</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14306715.md#1">中共设“惩独专区” 民进党：制造寒蝉效应</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/11/n10208093.md#1" target="_blank">古玉文：消灭私有制不是出路（下）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/3/11/n4660107.md#1" target="_blank">修炼法轮功 7旬老人弯成90度的腰直起来</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/1/n10353384.md#1" target="_blank">郑恩宠：中国打压 招安律师与林昭精神</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/4/11/n7543764.md#1" target="_blank">军转干部感恩法轮大法给了第二次生命</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14271929.md#1">大预言家的“末世预言”（上）：指向什么出路？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274439.md#1">【未解之谜】二战上校转世 他的话救了今生的父亲</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277524.md#1">她的过去和现在：用舞蹈完成父亲遗愿</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14271930.md#1">大预言家的“末世预言”（下）：古今妙合共振！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14277236.md#1">【菁英论坛】中华民国在哪里 黄埔精神就在哪里</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277862.md#1">【时事金扫描】摧毁上百无人机 乌导弹威胁莫斯科</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277406.md#1">【新闻大家谈】美国会众院通过重磅法案</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14276835.md#1">三中全会政治高于经济 分析：中共全线告急</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/24/n14276527.md#1">为逃离中国 三十多岁女性选择“大龄留学”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14277312.md#1">美国众议院通过《法轮功保护法案》</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/24/n14276420.md#1">任嘉伦官宣解约A股上市公司 消息登热搜榜首</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14276867.md#1">史嘉蕾兴奋主演《侏罗纪4》 愿意被任何东西吃掉</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14276922.md#1">颂乐高雄开唱说想留在台湾 献唱张惠妹歌曲</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14277240.md#1">成龙代言的防毒软件卡巴斯基遭美国禁售</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/24/n14276549.md#1">那英《歌手5》排名垫底 网友错愕 疑是“剧本”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277656.md#1">安宁病房护士经验谈：临终者最惊人的3件事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14276883.md#1">咖喱饭酱汁该放左边或右边？ 日本网友投票</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/10/n14267943.md#1">“水果之王”榴梿药用价值高 吃后这样去异味</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/18/n14272340.md#1">造成人体不舒服、生病的六种邪气（上）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277393.md#1">婚姻陷入低潮 看韩剧翻转婚姻奇迹的启示</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300489.md#1">“别人”做的饭菜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307461.md#1">【时事金扫描】伊朗下战书 以色列却甩出一张图</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307329.md#1">【百年真相】从资本家到右派 李康年真话代价</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307614.md#1">【菁英论坛】紧张局势陡升 中东成火药桶？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306092.md#1">华人餐桌的美味 蓝蟹为何令意大利政府头疼</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305720.md#1">【更新】2024年巴黎奥运奖牌榜 8月6日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306005.md#1">奥运挺美惹祸 国家体育总局官员袁昊然遭调查</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306851.md#1">周星驰拍片曾资金不足 富豪出手只为演个角色</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306143.md#1">《死侍与金钢狼》票房惊人 席琳·狄翁逗趣恭喜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306732.md#1">章子怡带儿女出游 炎炎夏日陪玩全身包裹严实</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307570.md#1">黄晓明贺表妹陈梦奥运夺冠 却遭友人诡异吐槽</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306062.md#1">徐峥新片《逆行人生》遭一影院抵制 引热议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305693.md#1">飞机快起飞了还在排安检怎么办？旅游达人提2方法</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306209.md#1">营养师推荐一传统小吃 钙含量高豆浆25倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305481.md#1">补充水分小心喝下细菌毒素 这4种水不要喝</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302749.md#1">肾功能不及格的10大征兆 多注意可预防洗肾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300518.md#1">超级保健卫士：黑蒜? 壮体 抗癌</a></li>
 <hr>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/6/27/n14278726.htm">台参与国际受阻 林佳龙：中共错误诠释联大2758决议</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278726.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
